Silence "unsafe" warning in Jewel 0.40.0